2010-09-01: CSSlayer <wengxt@gmail.com>
    * 修复一些托盘程序背景颜色问题。（如trayer，但并未解决用im-switch启动的托盘背景为黑色的问题）

2010-08-31: CSSlayer <wengxt@gmail.com>
    * 修复输入框的箭头不显示的问题
	* 将字体设置移回配置文件中，而不是和皮肤一起设置
	* dark皮肤小更新
	* 修复一个拼写错误
	* 更新部分翻译
	* 修复不存在~/.config文件夹时的崩溃错误
	* 修复一个笔误带来的模糊音无效问题
	* 增加生成码表时的判断条件，防止生成无效的码表
	* 修复字体问题
	* 皮肤的颜色配置修改为原来的各个设置
	* 增加Ukoyi的新皮肤为Default，原default作为classic

2010-08-18: CSSlayer <wengxt@gmail.com>
    * 消除内存泄漏
	* 修复CTRL_5重新加载配置时会崩溃的问题
	* 修改微软双拼的一些配置，同时对于双拼方案令v可以被配置（如果影响了其他双拼请汇报Bug）
	* 对某些配置采取CTRL_5读取时不加载，保证稳定性（目前包含DBus和托盘）
	* 修复DBus模式会崩溃的问题
	* 修复各种码表相关Bug - -b

2010-08-16: CSSlayer <wengxt@gmail.com>
    * 为码表增加一个优先级设置，按照优先级大小对码表排序
	* 修复无法记录当前输入法的问题
	* 配置文件和皮肤也迁移到新格式，皮肤目前可以在用户目录下设置~/.config/fcitx/skin
	* 用户的码表调整为配置和用户码表都存储在~/.config/fcitx/table下
	* 皮肤的各个输入法图标文件名可以自行配置，默认为fcitx_skin.conf中的chn图标
	* 如果有对应文件存在那么就可以使用对应文件图标作为显示
	* 无全局配置文件，配置文件在第一次运行时自动生成
	* 目录返回~/.config/fcitx而不是~/.config/fcitx-utf8
	* 终端运行时提示性输出增多

2010-08-15: CSSlayer <wengxt@gmail.com>
    * 增加一个信息提示的窗口，如果环境变量设置有问题的话提示如何设置

2010-08-14: CSSlayer <wengxt@gmail.com>
    * 对配置文件有大量修改，初步加入国际化支持
	* 码表配置文件有所调整，一个配置文件对应一个码表，而不是原先所有码表使用一个配置文件
	* 配置文件内容使用覆盖策略，本地覆盖全局
	* profile和码表已经采用新格式，皮肤和config暂时未变动

2010-07-18: CSSlayer <wengxt@gmail.com>
    * 增加一个选项，在按下临时英文键时可以将已经输入的英文直接输入

2010-07-13: CSSlayer <wengxt@gmail.com>
    * 合并Skin Dark 0.5，感谢Jarryson
    * 修复一个内存访问越界的Bug
    * 修复Issue 259
    * 修复在XVnc等X Server环境下无法启动的问题
	* 修复两个disable选项时的编译问题

2010-06-26: CSSlayer <wengxt@gmail.com>
    * 修改dark皮肤的小显示问题
	* 更新默认皮肤的背景

2010-06-24: CSSlayer <wengxt@gmail.com>
    * 修复一个文字显示错误(Issue 244)
    * 现在所有的文字显示之前都会经过UTF-8有效性检验，避免cairo画笔失效

2010-06-22: CSSlayer <wengxt@gmail.com>
    * 修复一个由于记录模式带来的bug（输入过长时溢出）
    * 修复拼音输入时输入过长溢出的问题
    * 重新调整信息显示代码，采用统一函数修改具体字符串
	* 修复一个查询字体时的导致崩溃的指针问题
	* 增加崩溃时调试信息输出
	* 系统托盘随主题更换

2010-06-21: CSSlayer <wengxt@gmail.com>
    * 再次尝试解决字体问题
    * 由系统判断默认字体
    * 修复引入skin之后的光标位置问题

2010-06-19: CSSlayer <wengxt@gmail.com>
    * 移除Xft
    * 移除一些不再起作用的选项
    * 尝试解决字体问题
