@@ -34,6 +34,7 @@
 #include "ui/MainWindow.h"
 #include "ui/TrayWindow.h"
 #include "fcitx-config/configfile.h"
+#include "fcitx-config/cutils.h"
 #include "tools/tools.h"
 #ifdef _ENABLE_DBUS
 #include "interface/DBus.h"
