@@ -4,6 +4,7 @@
 #include <string.h>
 #include "ui/skin.h"
 #include "fcitx-config/configfile.h"
+#include "fcitx-config/cutils.h"
 
 void InitFont()
 {
